trying to fix commit issue

--- a/index.qmd
+++ b/index.qmd
@@ -4,5 +4,4 @@ title: "David Jansen"
 
 ![](./images/sunset.jpg)
 
-The site is created with Rstudio and Quarto (<https://quarto.org/docs/websites>).
-It uses a Docker container to manage R packages and is maintained through github actions.
+The site is created with Rstudio and Quarto (<https://quarto.org/docs/websites>). It uses a Docker container to manage R packages and is maintained through github actions.
