--- a/publications.qmd
+++ b/publications.qmd
@@ -5,6 +5,10 @@ csl: styles/animal-behaviour.csl
 nocite: |
   @jansen2003thesis, @jansen2005intern, @jansen2005thesis, @jansen2007, @jansen2012, @jansen2013, @jansen2013thesis, @manser2014, @townsend2017, @akinyi2019, @habig2019, @levy2020, @grieneisen2020, @grieneisen2021, @bjork2022, @gordon2023, @paietta2023, @roche2023, @weibel2024
 reference-section-title: " "  
+custom-css: |
+  .references .title {
+    display: none;
+  }
 ---
 
 
