fix links in presentation

--- a/presentations/MCEVBD_interview.qmd
+++ b/presentations/MCEVBD_interview.qmd
@@ -2,7 +2,7 @@
 title: "MCEVBD job interview"
 about:
   template: jolla
-  image: ./images/djansen.jpg
+  image: ../images/djansen.jpg
 ---
 
 #### MCEVBD job interview 
