--- a/presentations/MCEVBD_interview.qmd
+++ b/presentations/MCEVBD_interview.qmd
@@ -11,4 +11,4 @@ I gave this presentation as part of my job interview for my current job at the M
 
 <a href="../files/MCEVBD_presentation.pdf  ">MCEVBD interview</a>
 
-This presentation was made with LaTeX. The raw code can be found [here](./MCEVBD_interview/JansenD_presentation.Rtex).
+This presentation was made with LaTeX. The raw code can be found <a href="../files/MCEVBD_presentation.pdf  ">here</a> or can be downloaded [here](./MCEVBD_interview/JansenD_presentation.Rtex).
