--- a/presentations.qmd
+++ b/presentations.qmd
@@ -5,6 +5,10 @@ about:
   image: ./images/djansen.jpg
 ---
 
-#### MCEVBD job interview
+**MCEVBD job interview**
 
-I gave this <a href="./files/MCEVBD_presentation.pdf">presenttaion</a> as part of my job interview for my current job at the MCEVBD. This presentation was made with LaTeX. The raw code can be found see <a href="./files/MCEVBD_presentation_code.pdf">here</a> and downloaded [here](./files/JansenD_presentation.Rtex).
+I gave this <a href="./files/MCEVBD_presentation.pdf"> presentation </a> as part of my job interview for my current job at the MCEVBD. This presentation was made with LaTeX. The raw code can be found see <a href="./files/MCEVBD_presentation_code.pdf">here</a> and downloaded [here](./files/JansenD_presentation.Rtex).
+
+**PhD defense talk**
+
+I gave this <a href="./files/PhD_defence_talk_29APR13.pdf"> presentation </a> as part of my PhD defense at the University of Zurich. This presentation was made with LaTeX. The raw code can be found [here](./files/PhD_defence_talk_29APR13.tex).
