--- a/workshops/good_data_practises_for_MCEVBD_fellows.qmd
+++ b/workshops/good_data_practises_for_MCEVBD_fellows.qmd
@@ -94,11 +94,11 @@ R sees logical as 0/1 (FALSE/TRUE). This can be handy during coding.
 -   Try to have content of columns in correct data type and units
 -   An example why this ~~can~~ is important
 
-```{r, eval=TRUE}
+```{r}
 tibble(species = c("elphant", "mouse", "cheetah"),
        speed = c("24.0 mph", "8.1 mph", "74.6 mph"),
        speed_mph = c(24, 8.1, 74.7)) %>% 
-    flextable::flextable() 
+    knitr::kable()
 
 # %>% 
 #     flextable::fontsize(size = 14, part = "all") %>% 
@@ -151,10 +151,11 @@ labs(y = "speed (mph)")
 
 ::: columns
 ::: {.column width="70%"}
-```{r, eval=FALSE}
+```{r, eval=TRUE}
 raw_data_wide %>% 
-  flextable::flextable() %>% 
-  flextable::colformat_double(digits = 1)
+  knitr::kable()
+  #flextable::flextable() %>% 
+  #flextable::colformat_double(digits = 1)
 ```
 
 -   wide often easier for recording
@@ -162,14 +163,15 @@ raw_data_wide %>%
 :::
 
 ::: {.column width="30%"}
-```{r, eval=FALSE}
+```{r, eval=TYRUE}
 raw_data_wide %>% 
   pivot_longer(names_to = "houses",
                values_to = "tick_count",
                cols = -day) %>% 
-  slice(1:20) %>% 
-  flextable::flextable() %>% 
-  flextable::colformat_double(digits = 1)
+  slice(1:20) %>%
+  knitr::kable()
+  #flextable::flextable() %>% 
+  #flextable::colformat_double(digits = 1)
 ```
 :::
 :::
