updated to kable tables

--- a/workshops/good_data_practises.qmd
+++ b/workshops/good_data_practises.qmd
@@ -67,9 +67,8 @@ R sees logical as 0/1 (FALSE/TRUE). This can be handy during coding.
 tibble(species = c("elphant", "mouse", "cheetah"),
        speed = c("24.0 mph", "8.1 mph", "74.6 mph"),
        speed_mph = c(24, 8.1, 74.7)) %>% 
-  knitr::kable(digits = 1)
-# 
-# 
+  knitr::kable(digits = 1) %>% 
+  kable_classic(full_width = F, html_font = "Cambria")
 #     flextable::flextable() %>% 
 #     flextable::fontsize(size = 14, part = "all") %>% 
 #     flextable::colformat_double(digits = 1) %>%  
@@ -128,7 +127,7 @@ labs(y = "speed (mph)")
 :::
 
 ::: {.column width="60%"}
-```{r, eval=FALSE}
+```{r, eval=TRUE}
 raw_data_wide <- tibble(day = c(1,2,3,4,5),
                House_A = c(10, 10, 8, 4, 2),
                House_B = c(2, 10, 9, 4, 2),
@@ -137,8 +136,10 @@ raw_data_wide <- tibble(day = c(1,2,3,4,5),
                House_E = c(14, 2, 8, 11, 1))
 
 raw_data_wide %>% 
-   flextable::flextable() %>% 
-   flextable::colformat_double(digits = 1) 
+  knitr::kable(digits = 1) %>% 
+  kable_classic(full_width = F, html_font = "Cambria")
+  # flextable::flextable() %>% 
+  # flextable::colformat_double(digits = 1) 
 ```
 :::
 
@@ -152,11 +153,13 @@ raw_data_wide %>%
 
 -   Lyric: "House E used pesticides and should be excluded for this study"
 
-```{r, echo=  TRUE, eval = FALSE}
+```{r, echo=  TRUE, eval = TRUE}
  raw_data_wide %>% 
   select(-House_E) %>%    ## The owners used pesticides during the trials
-      flextable::flextable() %>% 
-      flextable::colformat_double(digits = 1)
+  knitr::kable(digits = 1) %>% 
+  kable_classic(full_width = F, html_font = "Cambria")
+      # flextable::flextable() %>% 
+      # flextable::colformat_double(digits = 1)
 ```
 
 ## Data (4) {.smaller}
@@ -179,10 +182,12 @@ raw_data_wide %>%
 
 ::: columns
 ::: {.column width="70%"}
-```{r, eval=FALSE}
+```{r, eval=TRUE}
 raw_data_wide %>% 
-  flextable::flextable() %>% 
-  flextable::colformat_double(digits = 1)
+  knitr::kable(digits = 1) %>% 
+  kable_classic(full_width = F, html_font = "Cambria")
+  #flextable::flextable() %>% 
+  #flextable::colformat_double(digits = 1)
 ```
 
 -   wide often easier for recording
@@ -190,14 +195,16 @@ raw_data_wide %>%
 :::
 
 ::: {.column width="30%"}
-```{r, eval=FALSE}
+```{r, eval=TRUE}
 raw_data_wide %>% 
   pivot_longer(names_to = "houses",
                values_to = "tick_count",
                cols = -day) %>% 
   slice(1:20) %>% 
-  flextable::flextable() %>% 
-  flextable::colformat_double(digits = 1)
+  knitr::kable(digits = 1) %>% 
+  kable_classic(full_width = F, html_font = "Cambria")
+  #flextable::flextable() %>% 
+  #flextable::colformat_double(digits = 1)
 ```
 :::
 :::
