--- a/workshops/good_data_practises.qmd
+++ b/workshops/good_data_practises.qmd
@@ -15,8 +15,8 @@ format:
 
 ```{r}
 library(tidyverse)
-#library(kableExtra)
 library(knitr)
+library(kableExtra)
 ```
 
 
@@ -76,12 +76,12 @@ R sees logical as 0/1 (FALSE/TRUE). This can be handy during coding.
 -   Try to have content of columns in correct data type and units
 -   An example why this ~~can~~ is important
 
-```{r, eval=FALSE}
+```{r, eval=TRUE}
 tibble(species = c("elphant", "mouse", "cheetah"),
        speed = c("24.0 mph", "8.1 mph", "74.6 mph"),
        speed_mph = c(24, 8.1, 74.7)) %>% 
   knitr::kable(digits = 1) %>% 
-  kable_classic(full_width = F, html_font = "Cambria")
+  kableExtra::kable_classic(full_width = F, html_font = "Cambria")
 #     flextable::flextable() %>% 
 #     flextable::fontsize(size = 14, part = "all") %>% 
 #     flextable::colformat_double(digits = 1) %>%  
