--- a/presentations/MCEVBD_interview.qmd
+++ b/presentations/MCEVBD_interview.qmd
@@ -1,5 +1,5 @@
 ---
-title: "MCEVBD job interview"
+title: "Presentations"
 about:
   template: jolla
   image: ../images/djansen.jpg
@@ -7,11 +7,4 @@ about:
 
 #### MCEVBD job interview
 
-I gave this presentation as part of my job interview for my current job at the MCEVBD.
-
-<a href="../files/MCEVBD_presentation.pdf  ">MCEVBD interview</a>
-
-This presentation was made with LaTeX. The raw code can be found see <a href="../files/MCEVBD_presentation.pdf">here</a> and downloaded [here](./MCEVBD_interview/JansenD_presentation.Rtex).
-
-
-Click here for my <a href="../files/David_Jansen_Resume.pdf">Resume</a> or <a href="../files/David_Jansen_CV.pdf">CV</a>
+I gave this <a href="../files/MCEVBD_presentation.pdf  ">presenttaion</a> as part of my job interview for my current job at the MCEVBD. This presentation was made with LaTeX. The raw code can be found see <a href="../files/MCEVBD_presentation_code.pdf">here</a> and downloaded [here](./MCEVBD_interview/JansenD_presentation.Rtex).
