bold name in publication

--- a/publications.bib
+++ b/publications.bib
@@ -1,29 +1,25 @@
-% Show me as author
-%\newcommand*{\showme}[1]{\textbf{#1}}
-\newcommand*{\showme}[1]{\mkbibbold{#1}}
-
 @phdthesis{jansen2003thesis,
   title={The contribution of floodplains to the ecology of large herbivores},
-  author={Jansen, David A},
+  author={Jansen, D A},
   year={2013},
   school={University of Wageningen}
 }
 @phdthesis{jansen2005intern,
   title={Self-organising spatial patterns in mussel beds.},
-  author={Jansen, David A},
+  author={Jansen, D A},
   year={2013},
   school={University of Wageningen}
 }
 @phdthesis{jansen2005thesis,
   title={Diet selection of goats: - a feeding trial experiment},
-  author={Jansen, David A},
+  author={Jansen, D A},
   year={2013},
   school={University of Wageningen}
 }
 
  @article{jansen2007,
   title={Optimisation or satiation, testing diet selection rules in goats},
-  author={Jansen, David A and van Langevelde, Frank and de Boer, Willem F and Kirkman, Kevin P},
+  author={Jansen, D A and van Langevelde, Frank and de Boer, Willem F and Kirkman, Kevin P},
   journal={Small Ruminant Research},
   volume={73},
   number={1-3},
@@ -34,7 +30,7 @@
 
 @article{jansen2012,
   title={Segmental concatenation of individual signatures and context cues in banded mongoose (Mungos mungo) close calls},
-  author={Jansen, David A and Cant, Michael A and Manser, Marta B},
+  author={Jansen, D A and Cant, Michael A and Manser, Marta B},
   journal={BMC biology},
   volume={10},
   pages={1--11},
@@ -44,7 +40,7 @@
 
 @article{jansen2013,
   title={Testing for vocal individual discrimination in adult banded mongooses},
-  author={Jansen, David A and Cant, Michael A and Manser, Marta B},
+  author={Jansen, D A and Cant, Michael A and Manser, Marta B},
   journal={Journal of Zoology},
   volume={291},
   number={3},
@@ -54,14 +50,14 @@
 
 @phdthesis{jansen2013thesis,
   title={Vocal communication in the banded mongoose (Mungos mungo)},
-  author={Jansen, David A},
+  author={Jansen, D A},
   year={2013},
   school={University of Zurich}
 }
 
 @article{manser2014,
   title={Vocal complexity in meerkats and other mongoose species},
-  author={Manser, Marta B and Jansen, \textbf{Jansen, D. A.} and Graw, Beke and Holl{\'e}n, Linda I and Bousquet, Christophe AH and Furrer, Roman D and Le Roux, Aliza},
+  author={Manser, Marta B and Jansen, D A and Graw, Beke and Holl{\'e}n, Linda I and Bousquet, Christophe AH and Furrer, Roman D and Le Roux, Aliza},
   booktitle={Advances in the Study of Behavior},
   volume={46},
   pages={281--310},
@@ -71,7 +67,7 @@
 
 @article{townsend2017,
   title={Exorcising G rice's ghost: An empirical approach to studying intentional communication in animals},
-  author={Townsend, Simon W and Koski, Sonja E and Byrne, Richard W and Slocombe, Katie E and Bickel, Balthasar and Boeckle, Markus and Braga Goncalves, Ines and Burkart, Judith M and Flower, Tom and Gaunet, Florence and others},
+  author={Townsend, Simon W and Koski, Sonja E and Byrne, Richard W and Slocombe, Katie E and Bickel, Balthasar and Boeckle, Markus and Braga Goncalves, Ines and Burkart, Judith M and Flower, Tom and Gaunet, Florence and  Glock, H. J. and Gruber, T. and  Jansen, D. A. and Liebal, K. and Linke, A. and Miklósi, Á. and Moore, R. and van Schaik, C. P. and Stoll, S. and Vail, A. and Manser, M. B.},
   journal={Biological Reviews},
   volume={92},
   number={3},
@@ -82,7 +78,7 @@
 
 @article{akinyi2019,
   title={Costs and drivers of helminth parasite infection in wild female baboons},
-  author={Akinyi, Mercy Y and \showme{Jansen, D. A.} and Habig, Bobby and Gesquiere, Laurence R and Alberts, Susan C and Archie, Elizabeth A},
+  author={Akinyi, Mercy Y and Jansen, D. A. and Habig, Bobby and Gesquiere, Laurence R and Alberts, Susan C and Archie, Elizabeth A},
   journal={Journal of Animal Ecology},
   volume={88},
   number={7},
@@ -92,7 +88,7 @@
 
 @article{habig2019,
   title={Multi-scale predictors of parasite risk in wild male savanna baboons (Papio cynocephalus)},
-  author={Habig, Bobby and \showme{Jansen, D. A.} and Akinyi, Mercy Y and Gesquiere, Laurence R and Alberts, Susan C and Archie, Elizabeth A},
+  author={Habig, Bobby and Jansen, D. A. and Akinyi, Mercy Y and Gesquiere, Laurence R and Alberts, Susan C and Archie, Elizabeth A},
   journal={Behavioral Ecology and Sociobiology},
   volume={73},
   pages={1--16},
@@ -102,7 +98,7 @@
 
 @article{levy2020,
   title={A comparison of dominance rank metrics reveals multiple competitive landscapes in an animal society},
-  author={Levy, Emily J and Zipple, Matthew N and McLean, Emily and Campos, Fernando A and Dasari, Mauna and Fogel, Arielle S and Franz, Mathias and Gesquiere, Laurence R and Gordon, Jacob B and Grieneisen, Laura and others},
+  author={Levy, Emily J and Zipple, Matthew N and McLean, Emily and Campos, Fernando A and Dasari, Mauna and Fogel, Arielle S and Franz, Mathias and Gesquiere, Laurence R and Gordon, Jacob B and Grieneisen, Laura and Habig, Bobby and  Jansen, D. A. and Learn, Niki H. and Weibel, Chelsea J. and Altmann,  Jeanne, and Alberts, Susan C. and Archie, Elizabeth A},
   journal={Proceedings of the Royal Society B},
   volume={287},
   number={1934},
@@ -113,7 +109,7 @@
 
 @inproceedings{grieneisen2020,
   title={Heritability of the gut microbiome in wild baboons (Papio cynocephalus)},
-  author={Grieneisen, L and Dasari, M and Gould, TJ and Bjork, JR and Grenier, J and Yotova, V and \showme{Jansen, D. A.} and Gottel, N and Gilbert, JA and Barreiro, L and others},
+  author={Grieneisen, L and Dasari, M and Gould, TJ and Bjork, JR and Grenier, J and Yotova, V and   Jansen, D. A. and Gottel, N and Gilbert, JA and Barreiro, L and others},
   booktitle={American Journal of Primatology}, 
   volume={82},
   year={2020},
@@ -122,7 +118,7 @@
 
 @article{grieneisen2021,
   title={Gut microbiome heritability is nearly universal but environmentally contingent},
-  author={Grieneisen, Laura and Dasari, Mauna and Gould, Trevor J and Bj{\"o}rk, Johannes R and Grenier, Jean-Christophe and Yotova, Vania and \showme{Jansen, D. A.} and Gottel, Neil and Gordon, Jacob B and Learn, Niki H and others},
+  author={Grieneisen, Laura and Dasari, Mauna and Gould, Trevor J and Bj{\"o}rk, Johannes R and Grenier, Jean-Christophe and Yotova, Vania and Jansen, D. A. and Gottel, Neil and Gordon, Jacob B and Learn, Niki H and others},
   journal={Science},
   volume={373},
   number={6551},
@@ -133,7 +129,7 @@
 
 @article{bjork2022,
   title={Synchrony and idiosyncrasy in the gut microbiome of wild baboons},
-  author={Bj{\"o}rk, Johannes R and Dasari, Mauna R and Roche, Kim and Grieneisen, Laura and Gould, Trevor J and Grenier, Jean-Christophe and Yotova, Vania and Gottel, Neil and \showme{Jansen, D. A.} and Gesquiere, Laurence R and others},
+  author={Bj{\"o}rk, Johannes R and Dasari, Mauna R and Roche, Kim and Grieneisen, Laura and Gould, Trevor J and Grenier, Jean-Christophe and Yotova, Vania and Gottel, Neil and Jansen, D. A. and Gesquiere, Laurence R and others},
   journal={Nature ecology \& evolution},
   volume={6},
   number={7},
@@ -151,14 +147,14 @@ year = {2022},
 issn = {0006-3207},
 doi = {https://doi.org/10.1016/j.biocon.2022.109740},
 url = {https://www.sciencedirect.com/science/article/pii/S0006320722002932},
-author = {Elise N. Paietta and Chelsea J. Weibel and David A. Jansen and Raphael S. Mututua and J. Kinyua Warutere and I. {Long'ida Siodi} and Laurence R. Gesquiere and Vincent Obanda and Susan C. Alberts and Elizabeth A. Archie},
+author = {Elise N. Paietta and Chelsea J. Weibel and D. A. Jansen and Raphael S. Mututua and J. Kinyua Warutere and I. {Long'ida Siodi} and Laurence R. Gesquiere and Vincent Obanda and Susan C. Alberts and Elizabeth A. Archie},
 keywords = {Human-animal interactions, Semi-arid ecosystems, Human-altered landscapes, Water limitation, Ranging patterns, Baboon mortality},
 abstract = {Most animal habitats are affected by humans. While some species tolerate and even benefit from these changes, others suffer. Understanding when and how human-altered landscapes affect animal behavior, health, reproduction, and survival is essential to species management in a human-dominated world. Here we use 27 years of data on human-baboon encounters in a protected, semi-arid ecosystem in Kenya to: (i) identify spatial, environmental, and group-level predictors of baboon encounters with pastoralists; (ii) test whether human-built water sources alter baboon ranging patterns; and (iii) test if human encounters are linked to baboon survival, reproduction, and health. We find that the primary driver of human-baboon encounters is water availability. During dry periods, pastoralists migrate into baboon rangelands, leading to frequent human-baboon encounters, especially near water wells. Further, the baboons shift their ranges to encompass newly built wells and move away from abandoned, dried-up wells. Since 2006, a third of adult baboon deaths were linked to violent encounters with humans or their dogs. Human encounters were also linked to high infant mortality and parasite diversity in females (but this effect could not be disentangled from seasonal confounds). For wild baboons, life in protected, pastoralist conservancies presents a double-edged sword: human-built wells enable the baboons to access water during dry periods, but these wells lead to encounters with humans, which have become a common source of baboon mortality. Together, our results serve as a comprehensive case study of anthropogenic effects on wild primates, highlighting the complex interactions between humans and wildlife in protected areas.}
 }
 
 @article{gordon2023,
   title={Ordinal dominance rank assignments: protocol for the Amboseli Baboon Research Project},
-  author={Gordon, Jacob B and \showme{Jansen, D. A.} and Learn, Niki H and Alberts, Susan C},
+  author={Gordon, Jacob B and Jansen, D. A. and Learn, Niki H and Alberts, Susan C},
   journal={Avaialable at: https://amboselibaboons. nd. edu/downloads/, Accessed Feb},
   volume={23},
   pages={2023},
@@ -167,7 +163,7 @@ abstract = {Most animal habitats are affected by humans. While some species tole
 
 @article{roche2023,
   title={Universal gut microbial relationships in the gut microbiome of wild baboons},
-  author={Roche, Kimberly E and Bjork, Johannes R and Dasari, Mauna R and Grieneisen, Laura and \showme{Jansen, D. A.} and Gould, Trevor J and Gesquiere, Laurence R and Barreiro, Luis B and Alberts, Susan C and Blekhman, Ran and others},
+  author={Roche, Kimberly E and Bjork, Johannes R and Dasari, Mauna R and Grieneisen, Laura and Jansen, D. A. and Gould, Trevor J and Gesquiere, Laurence R and Barreiro, Luis B and Alberts, Susan C and Blekhman, Ran and others},
   journal={Elife},
   volume={12},
   pages={e83152},
@@ -183,8 +179,19 @@ abstract = {Most animal habitats are affected by humans. While some species tole
 	doi = {10.1007/s11357-024-01157-5},
 	abstract = {Biological aging is near-ubiquitous in the animal kingdom, but its timing and pace vary between individuals and over lifespans. Prospective, individual-based studies of wild animals—especially non-human primates—help identify the social and environmental drivers of this variation by indicating the conditions and exposure windows that affect aging processes. However, measuring individual biological age in wild primates is challenging because several of the most promising methods require invasive sampling. Here, we leverage observational data on behavior and physiology, collected non-invasively from 319 wild female baboons across 2402 female-years of study, to develop a composite predictor of age: the non-invasive physiology and behavior (NPB) clock. We found that age predictions from the NPB clock explained 51\% of the variation in females’ known ages. Further, deviations from the clock’s age predictions predicted female survival: females predicted to be older than their known ages had higher adult mortality. Finally, females who experienced harsh early-life conditions were predicted to be about 6 months older than those who grew up in more benign conditions. While the relationship between early adversity and NPB age is noisy, this estimate translates to a predicted 2–3 year reduction in mean adult lifespan in our model. A constraint of our clock is that it is tailored to data collection approaches implemented in our study population. However, many of the clock’s components have analogs in other populations, suggesting that non-invasive data can provide broadly applicable insight into heterogeneity in biological age in natural populations.},
 	journal = {GeroScience},
-	author = {Weibel, Chelsea J. and Dasari, Mauna R. and Jansen, David A. and Gesquiere, Laurence R. and Mututua, Raphael S. and Warutere, J. Kinyua and Siodi, Long’ida I. and Alberts, Susan C. and Tung, Jenny and Archie, Elizabeth A.},
+	author = {Weibel, Chelsea J. and Dasari, Mauna R. and Jansen, D. A. and Gesquiere, Laurence R. and Mututua, Raphael S. and Warutere, J. Kinyua and Siodi, Long’ida I. and Alberts, Susan C. and Tung, Jenny and Archie, Elizabeth A.},
 	month = may,
 	year = {2024},
 }
+
+
+@article{jansen2025,
+  author = {Jansen, D. A. and Warutere, J. Kinyua and Tung, Jenny and Alberts, Susan C. and Archie, Elizabeth A.},
+	title = {Early-life paternal relationships predict adult female survival in wild baboons},
+    journal={Proceedings of the Royal Society B},
+  volume={xxx},
+  number={xxx},
+  year={in press}
+}
+
 
