updates to good practises

--- a/workshops/good_data_practises.qmd
+++ b/workshops/good_data_practises.qmd
@@ -18,17 +18,6 @@ library(tidyverse)
 library(knitr)
 ```
 
-
-```{r}
-installed.packages() %>% 
-  as_tibble() %>% 
-  filter(str_detect(Package, "knitr"))
-
-installed.packages() %>% 
-  as_tibble() %>% 
-  filter(str_detect(Package, "kableE"))
-```
-
 -   Data management
 
 -   Naming structures
@@ -46,13 +35,13 @@ installed.packages() %>%
 
 ::: nonincremental
 > -   keep in a 'save' format
-> -   Not excel format - transferring between platforms can cause an issue (e.g. dates)
+> -   Preferably not excel format - transferring between platforms can cause an issue (e.g. dates)
 > -   csv, tsv, maybe text
 :::
 
 > -   Don't make changes to this raw data
 
-## Data (2) {data-transition="convex"}
+## Data (2)
 
 -   Content of columns in correct data type and units
 
@@ -75,21 +64,21 @@ R sees logical as 0/1 (FALSE/TRUE). This can be handy during coding.
 -   Try to have content of columns in correct data type and units
 -   An example why this ~~can~~ is important
 
-```{r, eval=FALSE}
+```{r, eval=TRUE}
 tibble(species = c("elphant", "mouse", "cheetah"),
        speed = c("24.0 mph", "8.1 mph", "74.6 mph"),
        speed_mph = c(24, 8.1, 74.7)) %>% 
-  knitr::kable(digits = 1) %>% 
-  kableExtra::kable_classic(full_width = F, html_font = "Cambria")
-#     flextable::flextable() %>% 
-#     flextable::fontsize(size = 14, part = "all") %>% 
-#     flextable::colformat_double(digits = 1) %>%  
-#     flextable::width(j = 2, 1, unit = "in")
+  #knitr::kable(digits = 1) %>% 
+  #kableExtra::kable_classic(full_width = F, html_font = "Cambria")
+     flextable::flextable() %>% 
+     flextable::fontsize(size = 30, part = "all") %>% 
+     flextable::colformat_double(digits = 1) %>%  
+     flextable::width(j = 2, 2, unit = "in")
 ```
 
-. . .
+## Data (3)
 
-::: {,columns}
+::::: {,columns}
 ::: {.column width="45%"}
 ```{r}
 tibble(species = c("elphant", "mouse", "cheetah"),
@@ -114,7 +103,8 @@ tibble(species = c("elphant", "mouse", "cheetah"),
 labs(y = "speed (mph)")
 ```
 :::
-:::
+:::::
+
 
 ## Data (4)
 
@@ -186,20 +176,20 @@ raw_data_wide %>%
 
 -   A few months later...
 
-> -   Lyric: "I changed my mind about house_E"
+> -   Lyric: "I changed my mind about house E, because it was only done in the front yard"
 
 > -   "Sorry I deleted that data" versus "Let me rerun code"
 
 ## Wide format versus long format {.smaller}
 
-::: columns
+::::: columns
 ::: {.column width="70%"}
 ```{r, eval=FALSE}
 raw_data_wide %>% 
-  knitr::kable(digits = 1) %>% 
-  kable_classic(full_width = F, html_font = "Cambria")
-  #flextable::flextable() %>% 
-  #flextable::colformat_double(digits = 1)
+  #knitr::kable(digits = 1) %>% 
+  #kable_classic(full_width = F, html_font = "Cambria")
+  flextable::flextable() %>% 
+  flextable::colformat_double(digits = 0)
 ```
 
 -   wide often easier for recording
@@ -213,13 +203,13 @@ raw_data_wide %>%
                values_to = "tick_count",
                cols = -day) %>% 
   slice(1:20) %>% 
-  knitr::kable(digits = 1) %>% 
-  kable_classic(full_width = F, html_font = "Cambria")
-  #flextable::flextable() %>% 
-  #flextable::colformat_double(digits = 1)
+  #knitr::kable(digits = 1) %>% 
+  #kable_classic(full_width = F, html_font = "Cambria")
+  flextable::flextable() %>% 
+  flextable::colformat_double(digits = 0)
 ```
 :::
-:::
+:::::
 
 ## Data documentation (1)
 
@@ -231,17 +221,19 @@ You know details of project and data structure (at this moment), but what about 
 
 ## Data documentation (2) {.smaller}
 
--   README
-    -   one per dataset
-    -   provide a title for the dataset
-    -   brief description per column
-    -   publicly available data may need more details
-    -   <https://guides.lib.uci.edu/datamanagement/readme>
--   Metadata
-    -   often 1 per study
-    -   information does generally not change
-        -   e.g. details on study sites
-    -   data about data
+> - README  
+>    - one per dataset
+>    - provide a title for the dataset
+>    - brief description per column
+>    - publicly available data may need more details
+>    - <https://guides.lib.uci.edu/datamanagement/readme>
+
+> - Metadata  
+>     - data about data
+>     - often 1 per study
+>     - information does generally not change
+>         - e.g. details on study sites
+
 
 ::: aside
 https://datadryad.org/stash/best_practices https://data.research.cornell.edu/content/readme
@@ -253,7 +245,7 @@ https://datadryad.org/stash/best_practices https://data.research.cornell.edu/con
 
 > -   Understandable but not to long
 >     -   m1 versus glm_count_full
->     -   data versus tick_counts_EA
+>     -   data versus tick_counts_GH
 
 ::: callout-tip
 While a computer will ultimately run your code, it'll be read by humans, so write code intended for humans!
@@ -263,17 +255,15 @@ While a computer will ultimately run your code, it'll be read by humans, so writ
 
 > -   Be aware on naming rules of programs
 >     -   Avoid special characters (\$, \@, \*)
->     -   Avoid name of functions
->     -   No spaces !!
+>     -   **No spaces !!**
 >     -   Case-sensitive (e.g. R) versus case insensitive (SQL)
->     -   R (and many other languages) names can't start with numbers and does not like spaces
->     -   'car speed in miles per hour' versus 'car speed (mph)' versus car_speed_mph'
+>     -   R (and many other languages) names can't start with numbers
+>     -   'car speed in miles per hour' versus 'car speed (mph)' versus **car_speed_mph**'
 
 ## Naming {.smaller}
 
 -   Be aware on naming rules of programs
     -   Avoid special characters (\$, \@, \*)
-    -   Avoid name of functions
     -   No spaces !!
     -   Case-sensitive (e.g. R) versus case insensitive (SQL)
     -   R (and many other languages) names can't start with numbers and does not like spaces
@@ -283,7 +273,6 @@ While a computer will ultimately run your code, it'll be read by humans, so writ
 
 -   Be aware on naming rules of programs
     -   Avoid special characters (\$, \@, \*)
-    -   Avoid name of functions
     -   No spaces !!
     -   Case-sensitive (e.g. R) versus case insensitive (SQL)
     -   R (and many other languages) names can't start with numbers and does not like spaces
